# claude-eval

./: .gitignore  README.md  pyproject.toml
claude_eval/: __init__.py  cli.py  judge.py  report.py  runner.py
evals/: summarization.yaml
tests/: test_judge.py
